# python-sdbus

./: .clang-format  .gitignore  .pre-commit-config.yaml  pyproject.toml  setup.py
aiodbus.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: asyncio_api.rst  asyncio_deep.rst  asyncio_quick.rst  conf.py  exceptions.rst  general.rst  sync_api.rst  sync_quick.rst  unittest.rst
src/_sdbus/: __init__.pyi  _sdbus.c  _sdbus.h  _sdbus_bus.c  _sdbus_funcs.c  _sdbus_interface.c  _sdbus_message.c  sd_bus_internals.c  sd_bus_internals.h  sd_bus_internals.py  sd_bus_internals_bus.c  sd_bus_internals_funcs.c  sd_bus_internals_interface.c  sd_bus_internals_message.c
src/aiodbus/: __init__.py  __main__.py  bus.py  dbus_common_elements.py  dbus_common_funcs.py  dbus_exceptions.py  dbus_proxy_async_interfaces.py  exceptions.py  generator.py  handle.py  interface_generator.py  meta.py  unittest.py
src/aiodbus/bus/: __init__.py  any.py  message.py  (+2 more)
src/sdbus/: dbus_common_elements.py  dbus_proxy_async_method.py
test/: leak_tests.py  test_high_level_errors.py  test_low_level_api.py  test_request_name.py  test_sdbus_async_bad_class.py  test_sdbus_async_introspection.py
tests/: __init__.py  common_test_util.py  leak_tests.py  test_high_level_errors.py  test_interface_generator.py  test_low_level_api.py  test_low_level_errors.py  test_object_manager.py  test_read_write_dbus_types.py  test_request_name.py  test_sdbus_async.py  test_sdbus_async_bad_class.py  test_sdbus_async_introspection.py  test_sdbus_utils.py  test_typing.py
tests/benchmarks/: __init__.py  bench_async_ping.py
(+14 files in other folders)
