[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
license = { file = "COPYING.LESSER" }
name = "aiodbus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alan Dragomirecký", email = "alan@dragomirecky.com" }
]
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "black>=25.1.0",
    "jinja2>=3.1.5",
    "pytest>=8.3.4",
]
